--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,10 @@
         "xmemory": "cpp",
         "xstddef": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "string": "cpp",
+        "array": "cpp",
+        "algorithm": "cpp",
+        "vector": "cpp"
     }
 }
